--- a/main_roles.html
+++ b/main_roles.html
@@ -79,7 +79,7 @@
                         <div class="card_role" style="width: 19rem;" id="lead_programmer">
                             <div class="card-body">
                                 <h5 class="card-title">Lead Programmer</h5>
-                                <img src=images/avatars/003-avatar.png alt="Marek Sviderski" class="avatars">
+                                <img src=images/avatars/002-avatar.jpg alt="Marek Sviderski" class="avatars">
                                 <h5 class="card-text">Marek Sviderski</h5>
                                 <p class="card-text">Web Development Team</p> 
                             </div>
