--- a/main_roles.html
+++ b/main_roles.html
@@ -61,7 +61,7 @@
                                 <h5 class="card-title">Project Leader</h5>
                                 <img src=images/avatars/001-avatar.png alt="Duarte Campos" class="avatars">
                                 <h5 class="card-text">Duarte Campos</h5>
-                                <p class="card-text">Lead Designer<br/>Security Team</p>                      
+                                <p class="card-text">Web Development Team<br/>Security Team</p>                      
                             </div>
                         </div>
                     </div>
