--- a/our_work.html
+++ b/our_work.html
@@ -52,7 +52,7 @@
             <div class="container pt-5">
                 <h1>ADLINK Project</h1>
                 <img class="prototype_screenshoot" src="images/placeholder.png" alt="Prototype Screenshot">
-                <p>Our application allows users to securely connect to ADLINK's database in order to manage profiles.<br/> In order to do this we used the Symfony which allows us to esily add things like security, validation, authentication and authorisation in one bundle to make the website run more efficiently.<br/>We also made our website a PWA(Progressive web application) which allows for full responsivness and browser compatibility independant of what device the user is using, allows use of notifications to alert users, works offline and is safe to use.</p>
+                <p>Our application allows users to securely connect to ADLINK's database in order to manage profiles.<br/> In order to do this, we used the Symfony which allows us to easily add things like security, validation, authentication and authorisation in one bundle to make the website run more efficiently.<br/>We also made our website a PWA(Progressive web application) which allows for full responsiveness and browser compatibility independent of what device the user is using, allows the use of notifications to alert users, works offline and is safe to use.</p>
             </div>
         </div>
     </div>
