--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <div class="container pt-5" id="about_us">
             <div class="container pt-5">
                 <h3>Professional systems done with a smile!</h3>
+                <p>We are a team of enthusiastic students from different areas of Computing</p>
             </div>
         </div>
     </div>
