--- a/main_roles.html
+++ b/main_roles.html
@@ -119,7 +119,7 @@
                         <div class="col">
                             <div class="card_role" id="Lloyd Bradley">
                                 <div class="card-body">
-                                    <img src=images/avatars/006-avatar.png alt="Lloyd Bradley" class="avatars">
+                                    <img src=images/avatars/006-avatar.jpg alt="Lloyd Bradley" class="avatars">
                                     <h5 class="card-text">Lloyd Bradley</h5>
                                     <p class="card-text">Web Development Team<br/>Security Team</p> 
                                 </div>
